--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,9 +20,11 @@ jobs:
       - name: build
         run: npm run build 
       - name: RoamJS Publish
-        uses: dvargas92495/roamjs-publish@0.3.0
+        uses: dvargas92495/roamjs-publish@0.4.0
         with:
           token: ${{ secrets.ROAMJS_DEVELOPER_TOKEN }}
           source: build
           path: smart-assistant
           release_token: ${{ secrets.ROAMJS_RELEASE_TOKEN }}
+          email: dvargas92495@gmail.com
+          branch: ${{ github.ref_name }}
