--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "codemirror": "^5.65.0",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
-    "roamjs-components": "^0.36.6"
+    "roamjs-components": "^0.38.5"
   }
 }
